tests/res/construction/error_duplicate_key.say
type Point { pub x; pub y; }
say p = Point { x: 1, x: 2 }; // error: Duplicate field 'x' in construction of 'Point'
